--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>$ git clone git@github.com:axelor/axelor-erp.git
+$ cd axelor-erp/
+$ git checkout master
+$ git submodule init 
+$ git submodule update 
+$ git submodule foreach git checkout master
+$ git submodule foreach git pull origin master
+
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
